Prevent signposting pills from wrapping

--- a/CSS-slides.css
+++ b/CSS-slides.css
@@ -419,6 +419,7 @@ body {
   text-transform: uppercase;
   font-weight: 700;
   color: var(--deep-forest);
+  white-space: nowrap;
   width: fit-content;
 }
 
